[gd_scene load_steps=6 format=2]

[ext_resource path="res://player_female.gd" type="Script" id=1]
[ext_resource path="res://scenes/female.tscn" type="PackedScene" id=2]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="CapsuleShape" id=2]
margin = 0.06
radius = 0.3
height = 1.6

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.16, 0.04, 0.16 )

[node name="player_female" type="RigidBody"]
mass = 71.0
physics_material_override = SubResource( 1 )
can_sleep = false
axis_lock_angular_x = true
axis_lock_angular_z = true
script = ExtResource( 1 )

[node name="Body_CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -5.68248e-008, -1, 0, 1.3, -4.37114e-008, 0, 1.1, 0 )
shape = SubResource( 2 )

[node name="Feet_CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.04, 0 )
shape = SubResource( 3 )

[node name="Rotation_Helper" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.52, 0 )

[node name="Model" type="Spatial" parent="Rotation_Helper"]
transform = Transform( -4.37114e-008, 0, -1, 0, 1, 0, 1, 0, -4.37114e-008, 0, -1.52, 0 )

[node name="female" parent="Rotation_Helper/Model" instance=ExtResource( 2 )]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, -0.104132, 0, 3.6024e-008 )

[node name="pathfinder" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="eyepoint" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="viewpoint" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 1 )
